tests/expectations/compiler/futures/future_in_tuple_check_fail.out
Error [ETYC0372104]: Not all Finals were consumed: result2
    --> compiler-test:18:19
     |
  18 |             final {
     |                   ^
  19 |                 finish(result.1);
     |                 ^^^^^^^^^^^^^^^^^
  20 |             },
     |             ^
     |
     = Make sure all Finals are consumed exactly once. Consume by passing to a final fn call or final block.
Warning [WCEI03713004]: Value `result` used in finalize block is derived from external call `credits.aleo/transfer_private_to_public`, whose finalize may alter the state this value depends on.
    --> compiler-test:19:24
     |
  19 |                 finish(result.1);
     |                        ^^^^^^
     |
     = The external program's finalize runs concurrently and may invalidate assumptions based on this value. Consider re-reading the value on-chain inside the finalize block.
